# upskill-reskill-firmware-dev

./: README.md  index.html
data/: round_01.json  round_02.json
training materials/: day 1 dev workflow.html
training_materials/: day_01_dev_workflow.html  day_02_CAN_firmware.html  day_03_CAN_workshop.html
workspace/: ex02_blink_hello.ioc2  ex03_UART_IRQ.ioc2  ex03_bare_metal.ioc2  ex04_ADC_loopback.ioc2  ex04_scpi_demo.ioc2  ex07_CAN_basics.ioc2  ex07_CAN_filter.ioc2  ex07_CAN_irq.ioc2
workspace/ex02_blink_hello_cmake/: main.c
workspace/ex03_UART_IRQ_cmake/: main.c
workspace/ex03_bare_metal_cmake/: main.c
workspace/ex04_ADC_loopback_cmake/: main.c
workspace/ex04_scpi_demo_cmake/: CMakeLists.txt  adc_service.c  adc_service.h  app_config.h  main.c  scpi.c  scpi.h
workspace/ex07_CAN_basics_cmake/: main.c
workspace/ex07_CAN_irq_cmake/: main.c  main.h
workspace/ex07_can_filter_cmake/: main.c
